# Winchester-STG-Compiler

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  Main.hs  README.md  Tuprules.tup  wsc.cabal
WSC/: AST.hs  Arity.hs  Driver.hs  Error.hs  Main.hs  Parser.hs  Util.hs
WSC/AST/: Annotation.hs
Winchester STG Compiler.xcodeproj/: project.pbxproj
Winchester STG Compiler.xcodeproj/xcshareddata/xcschemes/: Winchester STG Compiler.xcscheme
doc/: Doxyfile  Tupfile
man/: wsc.1
src/: Tupfile
src/back/: Tupfile
src/driver/: Tupfile  driver.cc  driver.cpp
src/front/: Lexer.hpp  Lexer.l  Tupfile
src/middle/: Tupfile
src/syntax/: AST.hpp  Tupfile  ast.cc  ast.h  ast.hh  lexer.hh  lexer.rl  parser.y
test/: fac_stack.stg
wsc/: main.cpp
wsc.xcodeproj/: project.pbxproj
