Name:                wsc
Version:             0.1
-- Synopsis:            
-- Description:         

License:             BSD3
License-file:        LICENSE

Author:              Dylan Lukes
Maintainer:          lukes.dylan+wsc@gmail.com
Copyright:           (c) 2012 Dylan Lukes
Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.10


Executable wsc
  main-is:          Main.hs
  default-language: Haskell2010
  
  build-depends:    base                 >= 4.2.0.0 && < 4.6.0.0,
                    bytestring           >= 0.9.0.0 && < 0.10.0.0,
                    cmdargs              >= 0.9     && < 1.0,
                    data-lens            >= 2.0.0   && < 2.1.0,
                    data-lens-template   >= 2.1.0   && < 2.2.0,
                    groom                >= 0.1.1   && < 0.2.0,
                    mtl                  >= 2.0.0.0 && < 2.1.0.0,
                    trifecta             >= 0.49    && < 0.50.0,
                    unordered-containers >= 0.1.4.0 && < 0.2.0.0,
                    utf8-string          >= 0.3.0   && < 0.4.0,
                    wl-pprint-terminfo   >= 0.8.0   && < 0.9
  
  other-modules:    
  
  -- extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         
  